Add icon text on sidebar

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,8 +6,8 @@ $primary-dark: #e4960e;
 $secondary-dark: #eba92a;
 $text-primary-dark: #ffffff;
 $bg-primary-dark: #181612;
-$bg-secondary-dark: #1b1b16;
-$border-primary: #2b2923;
+$bg-secondary-dark: #272720;
+$border-primary: #58554b;
 
 $primary-light: #e4960e;
 $secondary-light: #eba92a;
