--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -1,13 +1,32 @@
-.container {
+.wrapper-container {
   position: absolute;
   top: 20px;
   left: 20px;
   bottom: 20px;
-  width: 220px;
+  width: 50px;
   background-color: var(--bg-secondary);
   border: 1px solid var(--border-primary);
   border-radius: 3px;
   padding: 1rem;
+  opacity: 1;
+  transition: 0.5s;
+  z-index: 9999;
+  overflow: hidden;
+
+  &:hover {
+    width: 220px;
+
+    > .container > .menu {
+      a > span {
+        color: var(--text-primary);
+        letter-spacing: 0rem;
+      }
+    }
+  }
+}
+
+.container {
+  width: 220px;
 }
 
 .selector-bg {
@@ -21,16 +40,45 @@
 
 .menu {
   position: relative;
-  padding: 1rem;
+  padding: 0.8rem 1rem;
   font-weight: 300;
   z-index: 2;
 
+  .icon {
+    font-family: 'Passion One';
+    font-weight: bold;
+    font-size: 1.4rem;
+    position: relative;
+    left: -1rem;
+    top: 1px;
+    display: inline-block;
+    width: 50px;
+    color: var(--text-primary);
+    text-align: center;
+    pointer-events: none;
+    transition: 0.5s;
+  }
+
   a {
-    display: block;
+    display: inline-block;
     text-decoration: none;
+
+    span {
+      position: relative;
+      left: -0.5rem;
+      color: transparent;
+      transition: 0.5s;
+    }
   }
 
   a:hover {
-    color: white;
+    span {
+      color: var(--primary) !important;
+      pointer-events: none;
+    }
+
+    .icon {
+      color: var(--primary);
+    }
   }
 }
